--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fuel Cost Calculator</title>
+    <title>燃費・電費比較計算</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Fuel Cost Calculator</h1>
+        <h1>燃費・電費比較計算</h1>
         <form>
-            <label for="mileage">現在の燃費（km/l）:</label>
+            <label for="recommendedCar">おすすめ車種：</label>
+            <select id="recommendedCar">
+                <option value="leaf">リーフ</option>
+                <option value="aria">アリア</option>
+                <option value="sakura">サクラ</option>
+            </select><br>
+
+            <label for="multiplicationFactor">掛け率：</label>
+            <input type="number" id="multiplicationFactor"><br>
+
+            <label for="mileage">現在の燃費（km/l）：</label>
             <input type="number" id="mileage"><br>
 
-            <label for="gasolineCost">1Lのガソリン代（円）:</label>
+            <label for="gasolineCost">１Lのガソリン代（円）：</label>
             <input type="number" id="gasolineCost"><br>
 
-            <label for="electricityCost">1kWの電気代（円）:</label>
+            <label for="electricityCost">１kWの電気代（円）：</label>
             <input type="number" id="electricityCost"><br>
 
-            <label for="monthlyDistance">月の走行距離（km）:</label>
+            <label for="monthlyDistance">月の走行距離（km）：</label>
             <input type="number" id="monthlyDistance"><br>
 
             <button type="button" onclick="calculateCost()">計算</button>
         </form>
 
         <h2>結果</h2>
-        <p>１kmあたりのガソリン代: <span id="gasolineCostPerKm">-</span> 円</p>
-        <p>１kmあたりの電気代: <span id="electricityCostPerKm">-</span> 円</p>
-        <p>月の燃料代差額: <span id="fuelCostDifference">-</span> 円</p>
+        <p>１kmあたりのガソリン代：<span id="gasolineCostPerKm">-</span> 円</p>
+        <p>１kmあたりの電気代：<span id="electricityCostPerKm">-</span> 円</p>
+        <p>月の燃料代差額：<span id="fuelCostDifference">-</span> 円</p>
     </div>
 
     <script src="script.js"></script>
