--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
                 <option value="sakura">サクラ</option>
             </select><br>
 
-            <label for="multiplicationFactor">掛け率：</label>
-            <input type="number" id="multiplicationFactor"><br>
-
+ <label for="catalogNotation">カタログ表記の：</label>
+　<select id="catalogNotation">
+    <option value="0.90">90%</option>
+    <option value="0.80">80%</option>
+　　</select><br>
+ 
             <label for="mileage">現在の燃費（km/l）：</label>
             <input type="number" id="mileage"><br>
 
