--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <option value="1.00">100%</option>
                 <option value="0.90">90%</option>
                 <option value="0.80">80%</option> 
+                <option value="0.70">70%</option>
             </select><br>
 
             <label for="mileage">現在の燃費（km/l）：</label>
