--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <label for="gasolineCost">１Lのガソリン代（円）：</label>
             <input type="number" id="gasolineCost"><br>
 
-            <label for="electricityCost">１kWの電気代（円）：</label>
+           <label for="electricityCost">１kWの電気代（円）：</label>
             <input type="number" id="electricityCost"><br>
-
+            <a href="https://www.yonden.co.jp/customer/price/plan/index.html" target="_blank">電気料金の詳細はこちら</a>
+ 
             <label for="monthlyDistance">月の走行距離（km）：</label>
             <input type="number" id="monthlyDistance"><br>
 
