--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>１kmあたりのガソリン代：<span id="gasolineCostPerKm">-</span> 円</p>
         <p>１kmあたりの電気代：<span id="electricityCostPerKm">-</span> 円</p>
         <p>月のガソリン代：<span id="monthlyGasolineCost">-</span> 円</p>
-        <p＞月の電気代：<span id="monthlyElectricityCost">-</span> 円</p>
+        <p>月の電気代：<span id="monthlyElectricityCost">-</span> 円</p>
         <p>月の燃料代差額：<span id="fuelCostDifference">-</span> 円</p>
     </div>
 
