--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <form>
             <label for="recommendedCar">おすすめ車種：</label>
             <select id="recommendedCar">
-                <option value="leaf">リーフ</option>
-                <option value="aria">アリア</option>
-                <option value="sakura">サクラ</option>
+                <option value="leaf">リーフ(8.05)</option>
+                <option value="aria">アリア(7.12)</option>
+                <option value="sakura">サクラ(9.0)</option>
             </select><br>
 
             <label for="catalogNotation">カタログ表記の：</label>
